--- a/templates/suggest.html
+++ b/templates/suggest.html
@@ -16,14 +16,16 @@
         background-color: #57b837;
 
         display: flex;
-        justify-content: center; /* Centers horizontally */
-        align-items: center; /* Centers vertically */
+        justify-content: center;
+        /* Centers horizontally */
+        align-items: center;
+        /* Centers vertically */
         height: 100vh;
     }
 
-    .main{
+    .main {
         margin: 0 auto;
-        background-color:#fff;
+        background-color: #fff;
         width: 600px;
         padding: 2%;
         border-radius: 5%;
@@ -55,7 +57,7 @@
     }
 
     input[type='text'],
-    input[type='email']{
+    input[type='email'] {
         width: 100%;
         padding: 10px;
         border-radius: 5px;
@@ -63,15 +65,15 @@
         box-sizing: border-box;
     }
 
-    .form-group-macro{
+    .form-group-macro {
         display: flex;
         justify-content: space-between;
         align-items: center;
         gap: 10px;
     }
 
-    input[type='number']{
-        width:10%;
+    input[type='number'] {
+        width: 10%;
         padding: 3px;
         margin: 5px
     }
@@ -109,19 +111,32 @@
                     <label for="foodname">Food Name</label>
                     <input type="text" id="foodname" name="foodname" required />
                 </div>
-                <div class="form-group-macro">
-                    <label for="email">Calories</label>
-                    <input type="number" id="cals" name="cals" required />
-                
-                    <label for="email">Protein</label>
-                    <input type="number" id="Protein" name="Protein" required />
-                
-                    <label for="email">Fats</label>
-                    <input type="number" id="Fats" name="Fats" required />
-                
-                    <label for="email">Fiber</label>
-                    <input type="number" id="Fiber" name="Fiber" required />
+                <div class="form-group">
+                    <label for="fooddesc">Food Description</label>
+                    <input type="text" id="fooddesc" name="fooddesc" required />
                 </div>
+                <div class="form-group">
+                    <label for="calories">Calories</label>
+                    <input type="text" id="calories" name="calories" required />
+                </div>
+
+                <div>
+                    <h4>Please fill out the following details if possible</h4>
+                </div>
+                <div class="form-group-macro">
+                    <label for="email">Carbs</label>
+                    <input type="number" id="Carbs" name="Carbs" />
+
+                    <label for="email">Protein</label>
+                    <input type="number" id="Protein" name="Protein" />
+
+                    <label for="email">Fats</label>
+                    <input type="number" id="Fats" name="Fats" />
+
+                    <label for="email">Fiber</label>
+                    <input type="number" id="Fiber" name="Fiber" />
+                </div>
+
                 <input type="submit" value="Submit" />
             </form>
         </div>
