macro progress rings work

--- a/templates/homepage_refreshing.html
+++ b/templates/homepage_refreshing.html
@@ -986,9 +986,7 @@
 
                     <b>Carbs</b>
                     <div class="carbs-percentage">0</div>
-                    <span id="carbs-eaten" style="display:none;">/ {{ carbs_currently_eaten }}</span><span
-                        id="carbs-to-eat" style="display:none;">{{ carbs_to_eat
-                        }}</span><br>
+                    <span id="carbs-eaten" style="display:none;">{{ carbs_currently_eaten }}</span><span id="carbs-to-eat" style="display:none;">{{ carbs_to_eat }}</span><br>
                 </div>
             </div>
 
@@ -1004,9 +1002,7 @@
                     </svg>
                     <b>Proteins</b>
                     <div class="protein-percentage">0</div>
-                    <span id="proteins-eaten" style="display:none;">/ {{ proteins_currently_eaten }}</span><span
-                        id="proteins-to-eat" style="display:none;">{{ proteins_to_eat
-                        }}</span><br>
+                    <span id="proteins-eaten" style="display:none;">{{ protiens_currently_eaten }}</span><span id="proteins-to-eat" style="display:none;">{{ proteins_to_eat }}</span><br>
                 </div>
             </div>
 
@@ -1022,8 +1018,7 @@
                     </svg>
                     <b>Fibre</b>
                     <div class="fibre-percentage">0</div>
-                    <span id="fiber-eaten" style="display:none;">/ {{ fiber_currently_eaten }}</span><span
-                        id="fiber-to-eat" style="display:none;">{{fiber_to_eat
+                    <span id="fiber-eaten" style="display:none;">{{ fiber_currently_eaten }}</span><span id="fiber-to-eat" style="display:none;">{{fiber_to_eat
                         }}</span><br>
                 </div>
             </div>
@@ -1040,8 +1035,7 @@
                     </svg>
                     <b>Fats</b>
                     <div class="fat-percentage">0</div>
-                    <span id="fats-eaten" style="display:none;">/ {{ fats_currently_eaten }}</span><span
-                        id="fats-to-eat" style="display:none;">{{ fats_to_eat
+                    <span id="fats-eaten" style="display:none;">{{ fats_currently_eaten }}</span><span id="fats-to-eat" style="display:none;">{{ fats_to_eat
                         }}</span><br>
                 </div>
             </div>
